# sambastack-tools

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: sambawiz-ci.yml
sambaeval/: .gitignore  README.md  package-lock.json  package.json
sambaeval/app/: globals.css  layout.tsx  page.tsx
sambaeval/app/components/: InfoTooltip.tsx  ResultsTable.tsx  SideNav.tsx
sambaeval/app/datasets/: page.tsx
sambaeval/app/lib/: api.ts  types.ts
sambaeval/app/providers/: page.tsx
sambaeval/app/scorers/: page.tsx
sambaeval/backend/: README.md  pyproject.toml
sambaeval/backend/sambaeval/: __init__.py  _csv.py  cli.py  datasets.py  executor.py  generators.py  models.py  openai_client.py  paths.py  run_registry.py  scoring.py  storage.py
sambaeval/backend/sambaeval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sambaeval/backend/sambaeval/api/: __init__.py  main.py
sambaeval/data/: providers.json.example
sambaeval/data/datasets/: codegen_example.jsonl  (+3 more)
sambaeval/scripts/: convert_scicode.py  requirements.txt  setup-venv.mjs  test_end_to_end.mjs  test_run_examples.mjs
sambawiz/: .gitignore  30-march-bt.yaml  README-CLI.md  README.md  VERSION  app-config.example.json  eslint.config.mjs  instrumentation.ts  jest.config.ts  jest.setup.ts  package-lock.json  package.json
sambawiz/app/: globals.css  layout.tsx  page.tsx  providers.tsx
sambawiz/context/: AppContext.tsx
sambawiz/docs/: bundle-builder.md  playground.md
sambawiz/scripts/: check_missing_models.py  check_missing_pefs.py  extract_model_names.ts
(+98 files in other folders)
